--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <section class="nav-section">
-            <div>
-                <img src="./media/icons/Untitled-1 1.png" alt="">
+            <div class="logo-pic">
+                <img src="./media/icons/Untitled-1 1.png" alt="food-logo">
             </div>
             <div class="nav-bar">
                 <a href="#">Home</a>
