my tenth commit

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <h1>Subcribe To Our Newsletter</h1>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, dolores ut sapiente quisquam consectetur nemo velit optio perferendis error rem illum qui ducimus harum quia sed ad ea. Nobis voluptate fugiat iure rerum laudantium enim at possimus quos provident laborum.</p>
+                    <p> Companies are now creating seafood alternatives made from plants, targeting those who follow vegetarian or vegan diets and those concerned about overfishing. New types of flours made from unconventional sources such as fruits, vegetables, and legumes, offering gluten-free and nutrient-rich options.</p>
                 </div>
                 <div class="collection"> 
                   <form id="form" onsubmit="handlingContact(event)">
