food delivery support syestem

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 </div>
                 <div class="collection"> 
                   <form id="form" onsubmit="handlingContact(event)">
-                    <input type="email" name="email-add" id="email" placeholder="Type your email">
+                    <input type="email" name="email-add" id="email" placeholder="Type your email" required>
                     <input type="submit" value="subscribe" class="subscribe-btn">
                  </form>
                  <div id="success-container"></div>
