my corrected website

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
                 </div>
                 <div class="popular-items">
                     <div class="special-pic">
-                        <img src="./media/item6.png" alt="item6-pic">
+                        <img src="./media/bon-fresco.png" alt="bon-fresco">
                     </div>
                     <div class="items-brief">
                         <div class="name-rate">
-                            <h2>Salads</h2>
+                            <h2>Bon-Fresco</h2>
                             <span><img src="./media/icons/Vector.png" alt="Vector"> 50</span>
                         </div>
                         <div class="cart">
@@ -255,11 +255,11 @@
                     </div>
                     <div class="popular-items">
                             <div class="special-pic">
-                                <img src="./media/docha.jpeg" alt="docha">
+                                <img src="./media/breakfast.jpg" alt="breakfast">
                             </div>
                             <div class="items-brief">
                                 <div class="name-rate">
-                                    <h2>Docha</h2>
+                                    <h2>Breakfast</h2>
                                     <span><img src="./media/icons/Vector.png" alt="Vector"> 50</span>
                                 </div>
                                 <div class="cart">
@@ -285,11 +285,11 @@
                     </div>
                     <div class="popular-items">
                             <div class="special-pic">
-                                <img src="./media/sushi.jpeg" alt="sushi">
+                                <img src="./media/pan-cake.jpg" alt="pan-cake">
                             </div>
                             <div class="items-brief">
                                 <div class="name-rate">
-                                    <h2>Sushi</h2>
+                                    <h2>Pan-Cake</h2>
                                     <span><img src="./media/icons/Vector.png" alt="Vector"> 50</span>
                                 </div>
                                 <div class="cart">
